[System.Serializable]
public class EnemyData
{
    public int baseDataIndex;
    public BaseData baseData;
    public int canonDataIndex;
    public CanonData canonData;
    public int level;
    public int version;
    public float shotInterval;
    public float hpRate;
}